Uses ES group name

--- a/tasks/check_vars.yml
+++ b/tasks/check_vars.yml
@@ -5,7 +5,7 @@
 
 - name: Checking that required variables are set
   fail: msg="{{ item }} is not defined"
-  when: not {{ item }}
+  when: not item
   with_items:
     - wazuh_server_elasticsearch_group
 
